--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <!-- End Icon -->
 
+    <!-- Add AOS-->
+      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- End AOS -->
+    
     <!-- My CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- End Css -->
@@ -45,7 +49,7 @@
     <!-- End Navbar -->
 
     <!-- Jumbotron -->
-    <section class="jumbotron text-center">
+    <section class="jumbotron text-center" data-aos="fade-right">
       <img src="img/My foto.jpeg" alt="My Foto" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Rayhan</h1>
       <p class="lead">Student | Programmer</p>
@@ -60,7 +64,7 @@
     <!-- End Jumbotron -->
 
     <!-- About -->
-    <section id="about">
+    <section id="about" data-aos="fade-up">
       <div class="container">
         <div class="row text-center mb-5">
           <div class="col">
@@ -90,13 +94,13 @@
     <section id="project">
       <div class="container">
         <div class="row mb-5">
-          <div class="col text-center">
+          <div class="col text-center" data-aos="fade-down">
             <h2>My Projects</h2>
           </div>
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="fade-down">
               <img src="img/project/monitor-img1.jpg" class="card-img-top" alt="Project1" />
               <div class="card-body">
                 <p class="card-text"><p>Credit Unsplash.com</p>
@@ -104,7 +108,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="fade-right">
               <img src="img/project/monitor-img2.jpg" class="card-img-top" alt="Project2" />
               <div class="card-body">
                 <p class="card-text"><p>Credit Unsplash.com</p>
@@ -112,7 +116,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="fade-left">
               <img  src="img/project/monitor-img3.jpg" class="card-img-top" alt="Project3" />
               <div class="card-body">
                 <p class="card-text"><p>Credit Unsplash.com</p>
@@ -120,7 +124,7 @@
             </div>
         </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="fade-down">
               <img  src="img/project/monitor-img4.jpg" class="card-img-top" alt="Project4" />
               <div class="card-body">
                 <p class="card-text"><p>Credit Unsplash.com</p>
@@ -128,7 +132,7 @@
             </div>
         </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="fade-right">
               <img  src="img/project/monitor-img5.jpg" class="card-img-top" alt="Project5" />
               <div class="card-body">
                 <p class="card-text"><p>Credit Unsplash.com</p>
@@ -141,7 +145,7 @@
     <!-- End Project -->
 
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" data-aos="fade-up">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#d1f1ef" fill-opacity="1" d="M0,224L48,234.7C96,245,192,267,288,261.3C384,256,480,224,576,186.7C672,149,768,107,864,101.3C960,96,1056,128,1152,160C1248,192,1344,224,1392,240L1440,256L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
         <div class="row">
             <div class="col text-center">   
@@ -176,6 +180,10 @@
       <p>Created With <i class="bi bi-braces text-danger"></i> by <a href="https://www.instagram.com/spcyl_/">Rayhan</a></p>
     </footer>
     <!-- End Footer -->
+       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
   </body>
 </html>
