--- a/index.html
+++ b/index.html
@@ -182,7 +182,11 @@
     <!-- End Footer -->
        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
-    AOS.init();
+    AOS.init({
+       offset: 120, // offset (in px) from the original trigger point
+       delay: 0, // values from 0 to 3000, with step 50ms
+       duration: 1000 
+    });
   </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
   </body>
